src/test/deca/extension/context/valid/assign_int_to_float.deca
// Array declaration of type float and dimension 1

{
    float[] a = {4,2,1};
}