src/test/deca/extension/context/invalid/wrong_dimension_too_small.deca
// Wrong dimension : float[] != float[][]

{
    float[][] tabFloat = {2.5, -1.5};
}